--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
     "declaration": true,
     "downlevelIteration": true,
     "experimentalDecorators": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "module": "esnext",
+    "moduleResolution": "nodenext",
     "importHelpers": true,
     "target": "es2022",
     "resolveJsonModule": true,
